# mobileProject

./: README.md  launch_ros2.sh  launch_unity.sh
ros2_ws/: build_container.sh  dockerfile  startup.sh
ros2_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ros2_ws/log/: latest_build  latest_list
ros2_ws/src/finalProject/: setup.cfg  setup.py
ros2_ws/src/finalProject/finalProject/: move_rectangular.py
ros2_ws/workspace/src/: package.xml  setup.cfg  setup.py
ros2_ws/workspace/src/mob_rob_obstacle_avoidance/: control_robot.py  move_circle.py  move_obstacle.py
unityStuffs/Assets/: RosPublisherExample.cs  msgbrowser_settings.asset  roomUnity.fbx
unityStuffs/Assets/Materials/Materials/: Ceiling_NO.mat  WoodPallet_CO.mat
unityStuffs/Assets/Model/Environment/: Mobile_robotics_env.prefab
unityStuffs/Assets/Resources/: ROSConnectionPrefab.prefab
unityStuffs/Assets/Scenes/: turtlebot3.unity
unityStuffs/Assets/Scripts/: readCameraData.cs
unityStuffs/ProjectSettings/: ProjectSettings.asset
unity_ws/: .gitignore  Dockerfile  build_container.sh  entrypoint.sh
unity_ws/.config/unityhub/: .updaterId  Cookies  Network Persistent State  Preferences  SingletonCookie  SingletonLock  SingletonSocket  TransportSecurity  editors-v2.json  hubInfo.json  login-window.json  main-window.json  projects-v1.json
unity_ws/.config/unityhub/Crashpad/: client_id
unity_ws/.config/unityhub/DawnCache/: data_1  index
unity_ws/.config/unityhub/GPUCache/: data_1  index
unity_ws/.config/unityhub/Session Storage/: LOG  (+1 more)
unity_ws/scripts/: install_dotnet.sh
(+47 files in other folders)
